--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
@@ -153,8 +153,9 @@
     <mat-expansion-panel
       class="expansion-style sub-expansion"
       *ngIf="
-        seguimientoSemanal.infoProyecto.estadoObra !== 'Con ejecución normal' ||
-        seguimientoSemanal.seguimientoSemanalAvanceFisico.length > 0
+          seguimientoSemanal.infoProyecto.estadoObra !== 'Con ejecución normal' ||
+          (seguimientoSemanal.seguimientoSemanalAvanceFisico &&
+          seguimientoSemanal.seguimientoSemanalAvanceFisico.length > 0)
       "
     >
       <mat-expansion-panel-header class="expansion-style--header">
