--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/verificar-avance-fisico/verificar-avance-fisico.component.html
@@ -65,7 +65,7 @@
                         </mat-card-title>
                     </mat-card-header>
                     <mat-card-content>
-                        <section class="text-left">
+                        <section class="text-left" *ngIf="seguimientoSemanal.seguimientoSemanalAvanceFisico.length > 0">
                             <div [innerHTML]="seguimientoSemanal.seguimientoSemanalAvanceFisico[0].observaciones"></div>
                         </section>
                     </mat-card-content>
