--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-descuentos-gog/form-descuentos-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-descuentos-gog/form-descuentos-gog.component.html
@@ -47,7 +47,7 @@
                                                       <mat-card-title class="header-card--text mt-1em" *ngIf="aportante.get( 'tipoAportante' ).value !== null"> Aportante {{ l + 1 }} </mat-card-title>
                                                       <div *ngIf="aportante.get( 'tipoAportante' ).value !== null" style="margin-left: .8em;">
                                                           <p><b>Tipo de aportante: </b> {{ aportante.get( 'tipoAportante' ).value.nombre }} </p>
-                                                          <p><b>Nombre del aportante: </b> {{ aportante.get( 'nombreAportante' ).value.nombreAportante }} </p>
+                                                          <p><b>Nombre del aportante: </b> {{ aportante.get( 'nombreAportante' ).value ? aportante.get( 'nombreAportante' ).value.nombreAportante : '' }} </p>
                                                           <p><b>Fuente de los recursos: </b> {{ firstLetterUpperCase( getValueFuente( aportante.get('fuenteRecursos').value, aportante.get( 'fuenteDeRecursos' ).value ) ) }} </p>
                                                           <p><b>Valor del descuento: </b> {{ aportante.get( 'valorDescuento' ).value | currency:'':'symbol-narrow': '.0-0' }} </p>
                                                       </div>
