--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/form-tercero-causacion/form-tercero-causacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/form-tercero-causacion/form-tercero-causacion.component.html
@@ -66,8 +66,8 @@
                                                             <div [formGroup]="discount">
                                                                 <p><b>Tipo de descuento: </b> <i> {{ firstLetterUpperCase( getDescuento( discount.get( 'tipoDescuento' ).value ) ) }} </i> </p>
                                                                 <div *ngFor="let aportanteDescuento of getAportanteDescuentos( i, j, k, l ).controls; index as m">
-                                                                    <p><b>Nombre del aportante: </b> {{ aportanteDescuento.get( 'nombreAportante' ).value.nombreAportante }} </p>
-                                                                    <p><b>Fuente de los recursos: </b> {{ firstLetterUpperCase( aportanteDescuento.get( 'fuente' ).value.nombre ) }} </p>
+                                                                    <p><b>Nombre del aportante: </b> {{ aportanteDescuento.get( 'nombreAportante' ).value ? aportanteDescuento.get( 'nombreAportante' ).value.nombreAportante : '' }} </p>
+                                                                    <p><b>Fuente de los recursos: </b> {{ firstLetterUpperCase( aportanteDescuento.get( 'fuente' ).value ? aportanteDescuento.get( 'fuente' ).value.nombre : '' ) }} </p>
                                                                     <p><b>Valor del descuento: </b> {{ aportanteDescuento.get( 'valorDescuento' ).value | currency:'':'symbol-narrow':'.0-0' }} </p>
                                                                     <p><b>Nuevo valor por el concepto para el aportante: </b> {{ aportanteDescuento.get( 'nuevoValorDescuento' ).value | currency:'':'symbol-narrow':'.0-0' }} </p>
                                                                 </div>
