--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/tercero-causacion/tercero-causacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/tercero-causacion/tercero-causacion.component.html
@@ -30,7 +30,7 @@
 
                             <div formArrayName="aportantes" *ngFor="let aportante of getAportantes( i, j ).controls; index as k">
                                 <mat-card-title class="header-card--text mt-1em" style="padding-left: 0em !important;"> Aportante {{ k + 1 }} </mat-card-title>
-                                <p><b>Tipo de aportante: </b> {{ aportante.get( 'tipoAportante' ).value.nombre }} </p>
+                                <p><b>Tipo de aportante: </b> {{ aportante.get( 'tipoAportante' ).value ? aportante.get( 'tipoAportante' ).value.nombre : '' }} </p>
                                 <p><b>Nombre del aportante: </b> {{ aportante.get( 'nombreAportante' ).value ? aportante.get( 'nombreAportante' ).value.nombreAportante : '' }} </p>
                                 <p><b>Fuente de los recursos: </b> {{ firstLetterUpperCase( aportante.get( 'fuenteRecursos' ).value.nombre ) }} </p>
                                 <p><b>Valor facturado por el concepto para el aportante: </b> {{ aportante.get( 'valorDescuento' ).value | currency:'':'symbol-narrow': '.0-0' }} </p>
@@ -55,8 +55,8 @@
                                                 <div [formGroup]="discount">
                                                     <p><b>Tipo de descuento: </b> {{ firstLetterUpperCase( getDescuento( discount.get( 'tipoDescuento' ).value ) ) }} </p>
                                                     <div *ngFor="let aportanteDescuento of getAportanteDescuentos( i, j, k ).controls">
-                                                        <p><b>Nombre del aportante: </b> {{ aportanteDescuento.get( 'nombreAportante' ).value.nombreAportante }} </p>
-                                                        <p><b>Fuente de los recursos: </b> {{ firstLetterUpperCase( aportanteDescuento.get( 'fuente' ).value.nombre ) }} </p>
+                                                        <p><b>Nombre del aportante: </b> {{ aportanteDescuento.get( 'nombreAportante' ).value ? aportanteDescuento.get( 'nombreAportante' ).value.nombreAportante : '' }} </p>
+                                                        <p><b>Fuente de los recursos: </b> {{ firstLetterUpperCase( aportanteDescuento.get( 'fuente' ).value ? aportanteDescuento.get( 'fuente' ).value.nombre : '' ) }} </p>
                                                         <p><b>Valor del descuento: </b> {{ aportanteDescuento.get( 'valorDescuento' ).value | currency:'':'symbol-narrow':'.0-0' }} </p>
                                                     </div>
                                                 </div>
