--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/gestionar-drp/gestionar-drp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/gestionar-drp/gestionar-drp.component.html
@@ -156,10 +156,14 @@
                         </ng-container>
 
                         <ng-container matColumnDef="fuenteFinanciacion">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fuente de financiación por aportante </th>
-                            <td mat-cell *matCellDef="let element">
-                                {{element.fuenteFinanciacion }}
-                            </td>
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Fuente de financiación por aportante </th>
+                          <td mat-cell *matCellDef="let element">
+                            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let fuenteUso of element.fuenteUso ; let i = index">
+                              <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let nombre of fuenteUso.nombre ; let j = index">
+                                {{ nombre }}
+                              </div>
+                            </div>
+                          </td>
                         </ng-container>
 
                         <ng-container matColumnDef="valorUso">
