FFIE-498 - RDS-18 -  nuevos acordeones cancelado drp
V_ListaContratacionModificacionContractual
V_GestionarGarantiasPolizas

--- a/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/contratos-modificaciones-contractuales/contratos-modificaciones-contractuales.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/contratos-modificaciones-contractuales/contratos-modificaciones-contractuales.component.html
@@ -61,7 +61,20 @@
         </mat-expansion-panel-header>
 
         <div *ngIf="sinDataRegistrados">
-          <app-tabla-registrados (sinData)="sinDataRegistrados = $event"></app-tabla-registrados>
+          <app-tabla-registrados (sinData)="sinDataRegistrados = $event" [esRegistrado]="true"></app-tabla-registrados>
+        </div>
+
+      </mat-expansion-panel>
+
+      <mat-expansion-panel class="expansion-style">
+        <mat-expansion-panel-header class="expansion-style--header w-40">
+          <mat-panel-title class="expansion-style--title completo">
+            Cancelado por generar
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+
+        <div *ngIf="sinDataDevueltos">
+          <app-tabla-registrados (sinData)="sinDataDevueltos = $event" [esRegistrado]="false"></app-tabla-registrados>
         </div>
 
       </mat-expansion-panel>
