--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/menu/menu.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/menu/menu.component.html
@@ -61,5 +61,13 @@
             </mat-expansion-panel-header>
             <app-tabla-con-aprobacion-de-polizas (estadoSemaforo3)="estadoAcordeon3 = $event"></app-tabla-con-aprobacion-de-polizas>
         </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style">
+          <mat-expansion-panel-header class="expansion-style--header">
+              <mat-panel-title class="expansion-style--title">
+                  Cancelado por generar
+              </mat-panel-title>
+          </mat-expansion-panel-header>
+          <app-tabla-con-aprobacion-de-polizas (estadoSemaforo3)="estadoAcordeon3 = $event"></app-tabla-con-aprobacion-de-polizas>
+      </mat-expansion-panel>
     </mat-accordion>
 </section>
