--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-modificacion-contractual/form-modificacion-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-modificacion-contractual/form-modificacion-contractual.component.html
@@ -173,7 +173,7 @@
 
         </mat-expansion-panel>
 
-        <div class="text-center w-15">
+        <div class="text-center w-15" *ngIf="dataNovedad?.estadoCodigo != '14'">
           <button mat-raised-button
                   color="accent"
                   class="btn-table"
