--- a/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-modificacion-contractual/form-modificacion-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/contratos-modificaciones-contractuales/components/form-modificacion-contractual/form-modificacion-contractual.component.html
@@ -129,7 +129,7 @@
 
       </mat-expansion-panel>
 
-      <div class="text-center w-15">
+      <div class="text-center w-15" *ngIf="dataNovedad?.estadoCodigo != '14'">
         <button mat-raised-button color="accent" class="btn-table"
           (click)="getDdp( dataNovedad?.contrato?.contratacion?.disponibilidadPresupuestal[0].disponibilidadPresupuestalId, dataNovedad?.contrato?.contratacion?.disponibilidadPresupuestal[0].numeroDdp )">
           Descargar DDP
