--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-admin/components/tabla-proyectos-admin/tabla-proyectos-admin.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-admin/components/tabla-proyectos-admin/tabla-proyectos-admin.component.html
@@ -20,10 +20,10 @@
       <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Gestión </th>
       <td mat-cell *matCellDef="let gestion">
         <button mat-button color="warn" mat-raised-button color="accent" *ngIf="gestion.enviado==false"
-          class="btn-table btn-cargar-proyecto m05_important" type="button" (click)="ver(gestion)">Ver detalle
+          class="btn-table btn-cargar-proyecto m05_important" type="button" (click)="ver(gestion,false)">Ver detalle
           /<br>Editar</button>
           <button mat-button color="warn" mat-raised-button color="accent" *ngIf="gestion.enviado!=false"
-          class="btn-table btn-cargar-proyecto m05_important" type="button" (click)="ver(gestion)">Ver detalle</button>
+          class="btn-table btn-cargar-proyecto m05_important" type="button" (click)="ver(gestion,true)">Ver detalle</button>
         <button mat-button color="warn" mat-raised-button color="accent"
           class="btn-table btn-cargar-proyecto m05_important" type="button" *ngIf="gestion.enviado==false"
           (click)="eliminar(gestion)">Eliminar</button>
