--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/menu-ficha-proyecto/menu-ficha-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/menu-ficha-proyecto/menu-ficha-proyecto.component.html
@@ -1,34 +1,46 @@
-<mat-card class="shipping-card">
+<mat-card class="shipping-card" *ngIf="indicadores != null && indicadores != undefined">
   <mat-card-header class="header-card header-card--margin">
-    <mat-card-title class="header-card--text"> Ficha N801801 </mat-card-title>
+    <mat-card-title class="header-card--text"> Ficha {{ indicadores?.informacion?.llaveMen }} </mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <p>
-      <strong> Contratista: </strong>
-      Construir futuro
+      <strong> Llave MEN: </strong>
+      {{ indicadores?.informacion?.llaveMen }}
+    </p>
+    <p>
+      <strong> Institución Educativa: </strong>
+      {{ indicadores?.informacion?.institucionEducativa }}
+    </p>
+    <p>
+      <strong> Sede: </strong>
+      {{ indicadores?.informacion?.sede }}
+    </p>
+    <p>
+      <strong> Tipo de Intervención: </strong>
+      {{ indicadores?.informacion?.tipoIntervencion }}
     </p>
     <div class="navegacion">
-      <a class="navegacion--button" routerLink="fichaProyecto/resumen">
+      <a class="navegacion--button" routerLink="fichaProyecto/resumen" *ngIf="indicadores.tieneResumen == true">
         <img src="assets/img/icon/Menu-proyectos/1-Resumen.svg" alt="Resumen" />
         Resumen
       </a>
-      <a class="navegacion--button" routerLink="fichaProyecto/contratacion">
+      <a class="navegacion--button" routerLink="fichaProyecto/contratacion" *ngIf="indicadores.tieneContratacion == true">
         <img src="assets/img/icon/Menu-proyectos/2-Contratacion.svg" alt="Contratación" />
         Contratación
       </a>
-      <a class="navegacion--button" routerLink="fichaProyecto/preparacion">
+      <a class="navegacion--button" routerLink="fichaProyecto/preparacion" *ngIf="indicadores.tienePreparacion == true">
         <img src="assets/img/icon/Menu-proyectos/3-Preparacion.svg" alt="Preparación" />
         Preparación
       </a>
-      <a class="navegacion--button" routerLink="fichaProyecto/seguimientoTecnico">
+      <a class="navegacion--button" routerLink="fichaProyecto/seguimientoTecnico" *ngIf="indicadores.tieneSeguimientoTecnico == true">
         <img src="assets/img/icon/Menu-proyectos/4-Seguimiento-tecnico.svg" alt="Seguimiento técnico" />
         Seguimiento técnico
       </a>
-      <a class="navegacion--button" routerLink="fichaProyecto/seguimientoFinanciero">
+      <a class="navegacion--button" routerLink="fichaProyecto/seguimientoFinanciero" *ngIf="indicadores.tieneSeguimientoFinanciero == true">
         <img src="assets/img/icon/Menu-proyectos/5-Seguimiento-financiero.svg" alt="Seguimiento financiero" />
         Seguimiento financiero
       </a>
-      <a class="navegacion--button" routerLink="fichaProyecto/entrega">
+      <a class="navegacion--button" routerLink="fichaProyecto/entrega" *ngIf="indicadores.tieneEntrega == true">
         <img src="assets/img/icon/Menu-proyectos/6-Entrega.svg" alt="Entrega" />
         Entrega
       </a>
