--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/tabla-resultados-proyecto/tabla-resultados-proyecto.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/tabla-resultados-proyecto/tabla-resultados-proyecto.component.html
@@ -11,28 +11,38 @@
     </ng-container>
 
     <!-- departamento Column -->
-    <ng-container matColumnDef="departamento">
+    <ng-container matColumnDef="departamentoMunicipio">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Departamento/ Municipio
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.departamento }} / {{ element.municipio }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.departamentoMunicipio }}</td>
     </ng-container>
 
     <!-- institucionEducativa Column -->
-    <ng-container matColumnDef="institucionEducativa">
+    <ng-container matColumnDef="institucionEducativaSede">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Institución Educativa/ Sede
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.institucionEducativa }} / {{ element.sede }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.institucionEducativaSede }}</td>
     </ng-container>
 
     <!-- tipoContrato Column -->
-    <ng-container matColumnDef="tipoContrato">
+    <ng-container matColumnDef="nombreTipoContrato">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Tipo de contrato
       </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.tipoContrato }}
+        {{ element.nombreTipoContrato }}
+      </td>
+    </ng-container>
+
+    <!-- tipoIntervencion Column -->
+    <ng-container matColumnDef="tipoIntervencion">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Tipo de Intervención
+      </th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.tipoIntervencion }}
       </td>
     </ng-container>
 
@@ -47,7 +57,7 @@
     </ng-container>
 
     <!-- id Column -->
-    <ng-container matColumnDef="id">
+    <ng-container matColumnDef="contratacionProyectoId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Gestión
       </th>
@@ -57,7 +67,7 @@
           mat-raised-button
           color="accent"
           class="btn-table"
-          (click)="verFicha()"
+          (click)="verFicha(element.contratacionProyectoId)"
         >
           Ver ficha
         </button>
